--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Simba">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Simba" title="Simba">
+
+
 
 </body>
 </html>
